Fixed white spaces between tagline and services. Fixed background images resize on work section

--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,7 @@ body{
 {
 	background-image:url(../img/background-street.jpg);
 	background-position:center center;
-	
+	/*background-size: 100% 100%;*/
 }
 
 #work ul{
@@ -549,7 +549,6 @@ body{
 
 #tagline{
 	background-image:url(../img/background-window.jpg);
-	min-height: 550px;
 }
 
 #tagline .backgroundContainer{
